# coraline-plugin-inappbrowser

./: CMakeLists.txt  README.md
inappbrowser/: CMakeLists.txt  InAppBrowserPlugin.cpp  loader.cpp
include/: InAppBrowserPlugin.h  inappbrowserExtIncludes.h  loader.h
shared/: CMakeLists.txt
